# SFML

./: .gitignore  CMakeLists.txt  CMakePresets.json  changelog.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: Config.cmake  ExamplesMacros.cmake  ExmaplesMacros.cmake  Format.cmake  InstallRules.cmake  Macros.cmake  OpenCppCoverage.cmake  Prelude.cmake  PrintExamples.cmake  SFMLConfig.cmake.in  TestMacros.cmake
doc/: CMakeLists.txt
examples/: CMakeLists.txt
examples/X11/: CMakeLists.txt
examples/cocoa/: CMakeLists.txt
examples/ftp/: CMakeLists.txt
examples/island/: CMakeLists.txt
examples/joystick/: CMakeLists.txt
examples/opengl/: CMakeLists.txt
examples/shader/: CMakeLists.txt
examples/sockets/: CMakeLists.txt
examples/sound/: CMakeLists.txt
examples/sound_capture/: CMakeLists.txt
examples/tennis/: CMakeLists.txt
examples/voip/: CMakeLists.txt
examples/vulkan/: CMakeLists.txt  Vulkan.cpp
examples/win32/: CMakeLists.txt
examples/window/: CMakeLists.txt
include/SFML/: Config.hpp.in
src/SFML/Audio/: CMakeLists.txt  Config.cmake.in
src/SFML/Graphics/: CMakeLists.txt  Config.cmake.in
src/SFML/Main/: CMakeLists.txt  Config.cmake.in  SFMLActivity.cpp
src/SFML/Network/: CMakeLists.txt  Config.cmake.in
src/SFML/System/: CMakeLists.txt  Config.cmake.in
src/SFML/Window/: CMakeLists.txt  Config.cmake.in
src/SFML/Window/Unix/: VulkanImplX11.cpp
src/SFML/Window/Win32/: VulkanImplWin32.cpp
test/: CMakeLists.txt
test/Graphics/: BlendMode.cpp  CircleShape.cpp  Color.cpp  Glyph.cpp  Rect.cpp  RectangleShape.cpp  Shape.cpp  Transform.cpp  Transformable.cpp  Vertex.cpp  VertexArray.cpp
test/Network/: Packet.cpp
test/System/: Angle.cpp  Clock.cpp  Err.cpp  FileInputStream.cpp  Time.cpp  Vector2.cpp  Vector3.cpp
test/TestUtilities/: SystemUtil.cpp
test/Window/: VideoMode.cpp
tools/windows/: resource.rc.in
